2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Removing cleaned stuff.

	* src/hildon-volumebar.h: Cosmetic.

	* src/hildon-vvolumebar.c: 
	* src/hildon-vvolumebar.h: Cleaning.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Adding more TODO.

	* src/hildon-volumebar-private.h:
	* src/hildon-volumebar.c:
	* src/hildon-volumebar.h: Cleaning up.

	* src/hildon-hvolumebar.c:
	* src/hildon-vvolumebar.c: Adjusting for changes in volumebar.
	
	* src/hildon-window-private.h:
	* src/hildon-window.c:
	* src/hildon-window.h: Adding the G_GNUC_CONST keyword, some more
	layouting tweaks.

2006-12-12  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* TODO: Adding a TODO file.

2006-12-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window-private.h:
	* src/hildon-window.c:
	* src/hildon-window.h: Correcting the coding style. Correcting the
	identing. Modyfying to use standard gobject set_private thingies.
	Making the private API not exported to symbols.

2006-12-11  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* pkgconfig/hildon.pc.in:
	* src/Makefile.am: Fixing the install directories.

2006-11-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* autogen.sh: Updated autogen not to complain when launched without
	parameters in NOCONFIGURE mode.

2006-11-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-sort-dialog:
	* examples/hildon-sort-dialog/hildon-sort-dialog-example.c: Adding the
	example for HildonSortDialog. 

2006-11-23  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* configure.ac: Fixing the build problem of the examples (missing _)

	* examples/Makefile.am:
	* examples/hildon-weekday-picker:
	* examples/hildon-weekday-picker/hildon-weekday-picker-example.c:
	Adding a weekday picker example.

	* src/Makefile.am: Fixing the problem mis-ordered build.
